--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zip": "npm run build && node src/zip.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
