Changed Development name to ReaderNova

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chrome-extension-project",
-  "displayName": "chrome-extension-project",
+  "name": "NovaReader",
+  "displayName": "NovaReader",
   "version": "0.0.0",
   "author": "**",
   "description": "",
